# uml_parser

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: lib.rs  uml_print.rs
test/: included.uml  test.uml  test_include.uml
