[package]
authors = ["Chris Swindle <christopher.swindle@metaswitch.com>"]
name = "uml_parser"
description = "PlantUML parser for rust"
version = "0.1.1"
license = "Apache-2.0"
repository = "https://github.com/Metaswitch/uml_parser"
keywords = ["uml", "parser"]

[dependencies]
log = "0.4.6"
nom = "2.0.0"
